[tool.poetry]
name = "hot-topics"
version = "0.1.0"
description = ""
authors = ["interifter <zachary@interift.com>"]
readme = "README.md"
packages = [{include = "hot_topics", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^8.1.3"
make = "^0.1.6.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
